Fixed: Moved the logo down.
The front page logo. It was too high.

--- a/elvis/static/css/elvis-style.css
+++ b/elvis/static/css/elvis-style.css
@@ -252,7 +252,7 @@ html, body
 .panel-body.search
 {
     margin-bottom: 15px;
-    margin-top: 25px;
+    margin-top: 75px;
 }
 
 /* Result template */
